printed hello world

--- a/HelloWorld.ipynb
+++ b/HelloWorld.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJFvra/o5Kvm8eb4e7VBO8",
+      "authorship_tag": "ABX9TyN5TMSNwJf+G5qAIV1edMcz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "zaUN6W8tlunX"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zaUN6W8tlunX",
+        "outputId": "99ef7c2b-e6d6-451e-cd18-9d1c6a38b0b9"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"hello world\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7h-NAaGcmEqX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
