printed mis is best

--- a/HelloWorld.ipynb
+++ b/HelloWorld.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5TMSNwJf+G5qAIV1edMcz",
+      "authorship_tag": "ABX9TyMpvRoDYr0uz0qZ99q5aq18",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,11 +30,11 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
+        "id": "zaUN6W8tlunX",
+        "outputId": "1b85d2e8-4276-4a04-dafe-f5f4c9fd9fe3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "zaUN6W8tlunX",
-        "outputId": "99ef7c2b-e6d6-451e-cd18-9d1c6a38b0b9"
+        }
       },
       "outputs": [
         {
@@ -51,9 +51,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(\"mis is best\")"
+      ],
+      "metadata": {
+        "id": "YpmxJL4ImUGK",
+        "outputId": "8337066c-5c51-4faa-b6c5-0d7d9a843dd8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mis is best\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7h-NAaGcmEqX"
+        "id": "jCh19AI3mYty"
       },
       "execution_count": null,
       "outputs": []
