--- a/AFC_North_APPG.ipynb
+++ b/AFC_North_APPG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJ7QUb1/DWftZZXkNHf18O",
+      "authorship_tag": "ABX9TyPSlPYMGdcHRj+beZ/Tsi0y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "FDnHR7N379-Z"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "TAPC3OQp8p1l"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -77,19 +77,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vIlO7eR186rs",
-        "outputId": "1a4e0eb8-1db7-4d0f-c9db-93c9f466e244"
+        "outputId": "e64aae24-5f56-48cb-ecc3-a48dd433a323"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<sqlite3.Cursor at 0x7917288b6c40>"
+              "<sqlite3.Cursor at 0x7f2a1ad1e340>"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
     },
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "LwmNIXQ689tg"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -145,9 +145,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lHtL_j5Q9IgC",
-        "outputId": "f1c61f57-ceba-4b35-90e1-86acd20af1bd"
+        "outputId": "d19d4b78-2163-4972-b2f0-d4d43ce85cb8"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
       "metadata": {
         "id": "hn1WIFYJ9huN"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -191,9 +191,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OjT-aawD9mqq",
-        "outputId": "4fcca717-ebc4-4a26-d0bb-8cfb7952dfa9"
+        "outputId": "8ced6bba-43b3-43d4-e9aa-8b78781b360e"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,9 +209,63 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Find the teams that have an average ppg of at least 24 and 8 wins\n",
+        "query_AND = \"SELECT team_name, average_ppg, wins_2025 FROM AFC_North_APPG WHERE average_ppg >= 24 AND wins_2025 >= 8\"\n",
+        "for row in conn.execute(query_AND):\n",
+        "  print(row)\n"
+      ],
+      "metadata": {
+        "id": "9m_qC_A49pIG",
+        "outputId": "e3433a1d-f323-446a-9300-9930cfa28217",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Ravens', 24.9, 8)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#find the teams that have an average ppg of at least 24 or 8 wins\n",
+        "query_OR = \"SELECT team_name, average_ppg, wins_2025 FROM AFC_North_APPG WHERE average_ppg >= 24 OR wins_2025 >= 8\"\n",
+        "for row in conn.execute(query_OR):\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "id": "Ulht9gaq9-fU",
+        "outputId": "8bce2959-89b6-4fa9-cf15-6aa0a745547f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Steelers', 23.4, 10)\n",
+            "('Ravens', 24.9, 8)\n",
+            "('Bengals', 24.4, 6)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "9m_qC_A49pIG"
+        "id": "n3JYC7_k-BNk"
       },
       "execution_count": null,
       "outputs": []
